# PhyREC

./: .gitignore  .readthedocs.yaml  pyproject.toml  requirements.txt  setup.py
PhyREC/: Calibration_old.py  ImageSequence.py  MCSInterface.py  PlotWaves.py  SignalAnalysis.py  SignalProcess.py  SupportFunctions.py  __init__.py
PhyREC/FDM/: Processing.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/api/: PhyREC.rst  modules.rst
docs/source/examples/: getting_started.rst  signals_processing.rst
examples/: PhyREC.mplstyle  Signal_test.py  basic_filter_example.py  basic_filter_signal_process_example.py  basic_plot.py
